--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,13 +26,13 @@ play.modules.enabled += "common.uploads.UploadModule"
 web.upload.dir = "/tmp/uploads"
 
 
-//sec.web.auths = [{
+security.web.auth = {
 
-  //login = true
-  //urls = ["/admin","/member"]
+  login = true
+  urls = ["/admin","/admin/*","/member/*"]
 
 
-//}]
+}
 
 
 
