Add pac4j-play module init configuration and the logout logic

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,6 @@
+include "security.conf"
+include "security-urls.conf"
+
 db.default.driver=org.h2.Driver
 #db.default.url="jdbc:h2:/tmp/fec0"
 db.default.url = "jdbc:h2:mem:fec"
@@ -15,24 +18,22 @@ play.http.secret.key=${?APPLICATION_SECRET}
 play.filters.headers.frameOptions = null
 
 
-play.http.requestHandler = "controllers.MyRequestHandler"
-play.http.errorHandler = "controllers.ErrorHandler"
+#play.http.requestHandler = "controllers.MyRequestHandler"
+#play.http.errorHandler = "controllers.ErrorHandler"
 
 
 play.modules.enabled += "controllers.StartModule"
 play.modules.enabled += "common.uploads.UploadModule"
 
+play.modules.enabled += "controllers.secs.SecurityModule"
+play.http.filters = "controllers.secs.Filters"
+
 
 web.upload.dir = "/tmp/uploads"
 
 
-security.web.auth = {
-
-  login = true
-  urls = ["/admin","/admin/*","/member/*"]
 
 
-}
 
 
 
