Refactory Admin Dashboard

--- a/conf/security-urls.conf
+++ b/conf/security-urls.conf
@@ -1,4 +1,10 @@
 pac4j.security.rules = [
+  {"/admin.*" = {
+    clients = "AnonymousClient"
+  }}
+  {"/adminboot.*" = {
+    clients = "AnonymousClient"
+  }}
   # Admin pages need a special authorizer and login is done via a form page.
   {"/admin.*" = {
     clients = "FormClient"
