Refactory flashing cache component

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,7 @@ play.http.secret.key=${?APPLICATION_SECRET}
 play.filters.headers.frameOptions = null
 
 
-#play.http.requestHandler = "controllers.MyRequestHandler"
+play.http.requestHandler = "controllers.MyRequestHandler"
 #play.http.errorHandler = "controllers.ErrorHandler"
 
 
@@ -26,6 +26,7 @@ play.modules.enabled += "startup.StartupModule"
 play.modules.enabled += "common.uploads.UploadModule"
 
 play.modules.enabled += "controllers.secs.SecurityModule"
+play.filters.enabled += controllers.FlashingCacheFilter
 play.http.filters = "controllers.secs.Filters"
 
 
